Fix horizontal scrolling

--- a/src/components/scss/About.scss
+++ b/src/components/scss/About.scss
@@ -1,4 +1,5 @@
 .about-container {
+  overflow-x: hidden;
   max-width: 600px;
   margin: 2em auto 8em auto;
 
