--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,6 @@ body {
     .App {
       margin: 0 auto;
       color: rgb(68, 79, 90);
-      overflow-x: hidden;
     }
   }
 }
